# fit4012-lab5-NguyenHuuManh12

./: CMakeLists.txt  README.md  cbc_decrypt.cpp  cbc_encrypt.cpp  structures.h
docs/: aes-code-notes.md
logs/: README.md
